	* !!! Changed default value of TYPO3_CONF_VARS[BE][fileCreateMask/folderCreateMask]. By default, those files are no longer writable for the group.
	* Fixed bug #2272: Added [PAGE].includeJS plus possibility to attach .js files to template resources (thanks to Johannes Vockeroth)
	* Fixed bug #75: t3lib_extfilefunc::func_copy() does not set file permissions properly

2006-02-07  Ingmar Schlecht <ingmar@typo3.org>

	* Fix "&amp;" problem in DMail jumpURLs

2006-02-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue #408: enable direct mail to fetch https pages with user authentification

2006-02-06  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature: Integrated ss_dragdrop extension into the core (page and folder drag and drop). Thanks to Stephane Schitter for his work on this.

2006-02-05  Dmitry Dulepov  <typo3@accio.lv>

	* Fix: (Versioning sysext) Two cells in table had hard-coded bgcolor attribute (were not skinnable)

2006-02-04  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed a minor logical bug in undo/history
	* Made SU-mode work again (was affected by hook name change)

2006-02-02  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Adjustments to the htmlArea RTE extension (see details in local ChangeLog)

2006-02-01  Dmitry Dulepov  <typo3@accio.lv>

	* Fix: renaming of localconf.php.TMP.php to localconf.php did not work on Windows platform

2006-02-01  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed an issue with non working links in JSMENUs

2006-02-01  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* t3lib_htmlmail email message-id: global declaration was missing.

2006-01-31  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* tslib_content: remove unused hooks originally intended for use by Direct Mail

2006-01-31  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #2396: Select-box items where displayed with garbled characters when forceCharset was set to utf-8
